<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".fragments.update.UpdateFragment">

    <!-- Title Input -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/title_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/project_title"
        android:textColorHint="@color/primary"
        android:layout_marginBottom="20dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        app:boxStrokeColor="@color/primary"
        app:hintTextColor="@color/primary"
        app:layout_constraintBottom_toTopOf="@+id/description_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/project_title"
            android:layout_width="230dp"
            android:layout_height="wrap_content"
            android:textColor="@color/on_background"
            android:maxLines="1" />

    </com.google.android.material.textfield.TextInputLayout>

    <!-- Description Input -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/description_layout"
        android:hint="@string/project_description"
        android:textColorHint="@color/primary"
        app:boxStrokeColor="@color/primary"
        app:hintTextColor="@color/primary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintVertical_bias="0.4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/project_description"
            android:layout_width="230dp"
            android:layout_height="300dp"
            android:textColor="@color/on_background"
            android:inputType="textMultiLine" />

    </com.google.android.material.textfield.TextInputLayout>

    <!-- Image URL Input -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/url_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/image_url"
        android:textColorHint="@color/primary"
        android:layout_marginTop="20dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        app:boxStrokeColor="@color/primary"
        app:hintTextColor="@color/primary"
        app:layout_constraintEnd_toEndOf="@+id/description_layout"
        app:layout_constraintStart_toStartOf="@+id/description_layout"
        app:layout_constraintTop_toBottomOf="@+id/description_layout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/project_url"
            android:layout_width="230dp"
            android:maxLines="1"
            android:layout_height="wrap_content"
            android:textColor="@color/on_background" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/update_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/secondary"
        android:text="@string/update_text"
        android:textColor="@color/on_secondary"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="@+id/url_layout"
        app:layout_constraintStart_toStartOf="@+id/url_layout"
        app:layout_constraintTop_toBottomOf="@+id/url_layout" />

</androidx.constraintlayout.widget.ConstraintLayout>